lb.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: gowtham-eks-app
  name: gowtham-internal-lb
  namespace: gowtham-space
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: gowtham-eks-app
status:
  loadBalancer: {}
